# coin11-control-backend

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  _create_repos.py  _test_run.py  docker-compose.yml  pyproject.toml  requirements.txt  start-coin11.bat  start-coin11.ps1  test_load.py
.github/workflows/: docker-build.yml
app/: main.py
app/api/v1/: devices.py  router.py  tasks.py  update.py
app/core/: config.py  constants.py
app/models/: device.py
app/schemas/: device.py  task.py
app/services/: auto_task_settings.py  device_manager.py  device_selector_patch.py  repo_manager.py  scrcpy_service.py  screen_capture.py  task_engine.py  version_manager.py  websocket_manager.py
