[project]
name = "coin11-control-backend"
version = "0.1.0"
description = "Coin11-TB 网页控制平台后端 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "websockets>=14.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "adbutils>=2.12.0",
    "construct>=2.10.70",
    "retry>=0.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
